buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        jcenter()
        google()
    }
    dependencies {
    }
}

allprojects {
    apply plugin: "java"
    apply plugin: "idea"

    sourceCompatibility = 15

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }
    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }
    tasks.withType(JavaExec) {
        jvmArgs += "--enable-preview"
    }

    version = "1.0"
    ext {
        appName = "gdx-rpg2"
        gdxVersion = "1.9.13"
        controllerVersion = "2.2.0-SNAPSHOT"
        mappingVersion = "2.3.0"
        aiVersion = "1.8.2"
        lombokVersion = "1.18.16"
        jacksonVersion = "2.11.3"
        assertjVersion = "3.18.0"
        mockitoVersion = "3.6.0"
        junitVersion = "5.7.0"
    }

    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        google()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
    }
}

project(":desktop") {
    dependencies {
        implementation project(":core")
        implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
        implementation "com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$controllerVersion"
    }
}

project(":core") {
    dependencies {
        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"

        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
        implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
        implementation "com.badlogicgames.gdx-controllers:gdx-controllers-core:$controllerVersion"
        implementation "de.golfgl.gdxcontrollerutils:gdx-controllerutils-mapping:$mappingVersion"
        implementation "com.badlogicgames.gdx:gdx-ai:$aiVersion"
        implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    }
}

project(":tests") {
    dependencies {
        implementation project(":core")
        testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
        testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
        testImplementation "org.assertj:assertj-core:$assertjVersion"
        testImplementation "org.mockito:mockito-core:$mockitoVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    }
}
